src/objects/Affected_Item__c.object
<CustomObject>
    <description>Child object for the case complaint object</description>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Description__c</fullName>
        <label>Bulk Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Number__c</fullName>
        <label>Bulk Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Affected Items</relationshipLabel>
        <relationshipName>Affected_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_Revision__c</fullName>
        <label>Formula Revision</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <label>Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Affected Items</relationshipLabel>
        <relationshipName>Affected_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Label_Number__c</fullName>
        <description>Label # from Lot Query Response</description>
        <label>Label Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Revision_Code__c</fullName>
        <label>Label Revision Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Number_Sequence__c</fullName>
        <label>Lot Number Sequence</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Site__c</fullName>
        <label>Manufacturing Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBTY_Lot__c</fullName>
        <label>NBTY Lot#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Bulk_Number__c</fullName>
        <label>Oracle Bulk Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Product_Number__c</fullName>
        <label>Oracle Product Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging_Site__c</fullName>
        <label>Packaging Site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Suffix__c</fullName>
        <label>Product Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Affected Items</relationshipLabel>
        <relationshipName>Affected_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Synced_With_PQM__c</fullName>
        <label>Synced With PQM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Lot__c</fullName>
        <label>Vendor Lot#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sku__c</fullName>
        <label>sku</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Affected Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AI-{00000}</displayFormat>
        <label>Affected Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affected Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>